Changes for 3.0.26rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.0.25

3.0.25rc1 was released as 3.0.25 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.25rc1

Bug fixes:
A......... [ZBX-15220] fixed displaying of last value for values received in the same second (Sasha)
........S. [ZBX-15460] reset agent availability when host status changes, e.g., when host gets disabled (asitals)
...G...PS. [ZBX-11761] added warnings in case of TLS identity mismatch (akozlovs)
A......... [ZBX-15355] fixed undefined index in configuration.import API call (Sasha)
A......... [ZBX-15354] fixed undefined index in API calls without "auth" parameter (Sasha)
A......... [ZBX-14331] fixed error allowing users to change type of a host interface that already has items attached (gcalenko)
........S. [ZBX-15313] fixed unit suffix support in calculated item expressions (kalimulin)
A.F....... [ZBX-14592] fixed calculation of SLA and availability report when problem has negative duration (miks)
A......... [ZBX-15156] fixed undefined offset error in host screen with web item (talbergs)
...G...... [ZBX-14624] fixed agent collector not releasing connection to missing/removed disk devices (Andris, yurii)
..F....... [ZBX-14604] fixed displaying of the graph name on screens (miks)
..F....... [ZBX-15233] renamed fuzzytime() function description in dropdown list (Ivo)
...G...... [ZBX-12801] excluded zabbix_sender.dll from MS Windows builds with TLS (viktors)
...G...... [ZBX-15260] improved misleading warning message when agent fails to find log file during processing logrt[] item (asitals)
.......PS. [ZBX-15206] fixed deprecated net-snmp attribute (MVekslers)
.......PS. [ZBX-15238] fixed updating nextcheck time in discovery rules to avoid overlaps between discovery executions (asitals)